fixed dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,10 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   
+  
+}
+#root{
+  height: 100%
 }
 
 code {
